--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,5 @@
-<% # if @current_user %>
-
+<% if logged_in? %>
+  <h2>Create a new Post</h2>
+<% else %>
+  <h2>Welcome! Please <%= link_to "Sign up", signup_path %> or <%= link_to "Login", login_path %> </h2>
+<% end %>
